[gd_scene load_steps=18 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/EnemyTemplate.gd" type="Script" id=2]
[ext_resource path="res://scripts/enemies/EnemyStateMachine.gd" type="Script" id=3]
[ext_resource path="res://scripts/enemies/Patrol.gd" type="Script" id=4]
[ext_resource path="res://scripts/State.gd" type="Script" id=5]
[ext_resource path="res://scripts/Stagger.gd" type="Script" id=6]
[ext_resource path="res://scripts/enemies/Chase.gd" type="Script" id=7]
[ext_resource path="res://scripts/ui/hearts.gd" type="Script" id=8]
[ext_resource path="res://sprites/screwyheartgreen.png" type="Texture" id=9]
[ext_resource path="res://sounds/small_insect_2.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/swish-11.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/small_insect_die.wav" type="AudioStream" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="Animation" id=2]
resource_name = "stagger"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("StateMachine/Stagger")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "flash_white"
}, {
"args": [  ],
"method": "normal_color"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitbox/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("get_hit")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=4]
radius = 200.0

[sub_resource type="CircleShape2D" id=5]
radius = 3.0

[node name="EnemyTemplate" type="RigidBody2D" groups=[
"shaker",
]]
collision_layer = 4
collision_mask = 7
mode = 2
linear_damp = 30.0
script = ExtResource( 2 )
ACCELERATION = 100

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
START_STATE = NodePath("Patrol")

[node name="Patrol" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="repath" type="Timer" parent="StateMachine/Patrol"]

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="repath" type="Timer" parent="StateMachine/Chase"]

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Stagger" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
sprite_anim_disabled = true

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="Sprite"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/stagger = SubResource( 2 )

[node name="hitbox" type="Area2D" parent="."]
monitorable = false
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 70, 0 )
shape = SubResource( 3 )
disabled = true

[node name="VisionRay" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 500 )
collision_mask = 3

[node name="VisionArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
position = Vector2( 240, 0 )
shape = SubResource( 4 )

[node name="deathpit_detector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="deathpit_detector"]
shape = SubResource( 5 )

[node name="hearts" type="Node2D" parent="."]
script = ExtResource( 8 )
texture = ExtResource( 9 )

[node name="get_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
attenuation = 0.378929
[connection signal="timeout" from="StateMachine/Patrol/repath" to="StateMachine/Patrol" method="_on_repath_timeout"]
[connection signal="timeout" from="StateMachine/Chase/repath" to="StateMachine/Chase" method="_on_repath_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="VisionArea" to="StateMachine/Patrol" method="_on_VisionArea_body_entered"]
[connection signal="body_entered" from="deathpit_detector" to="." method="_on_deathpit_detector_body_entered"]
